@@ -1,0 +1,19 @@
+/*
+ * To change this license header, choose License Headers in Project Properties.
+ * To change this template file, choose Tools | Templates
+ * and open the template in the editor.
+ */
+
+package survive;
+
+/**
+ *
+ * @author Marble
+ */
+public class Global {
+    
+  public static final int xRes = 800;
+  public static final int yRes = 600;
+  public static int playerX = xRes / 2;
+  public static int playerY = yRes / 2;  
+}
